# AI_Agent_Design_Pattern_Collection

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
data/: support_tickets.json
demos/: gradio_interface.py  run_pattern.py  smart_support_triage.py
docs/: deployment.md  spec.md
docs/patterns/: part_1.md  part_2.md  part_3.md  part_4.md
huggingface_space/: README.md  app.py
notebooks/: smart_support_walkthrough.ipynb
src/ai_agent_patterns/: __init__.py  config.py  core.py  factory.py  types.py
src/ai_agent_patterns/llm/: __init__.py  base.py  litellm.py  mock.py  openai.py
src/ai_agent_patterns/memory/: __init__.py  base.py  conversation.py  vector.py
src/ai_agent_patterns/patterns/: __init__.py  evaluation_monitoring.py  exception_handling.py  exploration_discovery.py  goal_setting.py  guardrails.py  human_in_loop.py  inter_agent_communication.py  knowledge_retrieval.py  learning_adaptation.py  mcp.py  memory_management.py  multi_agent.py  parallelization.py  planning.py  prioritization.py  prompt_chaining.py  reasoning.py  reflection.py  resource_aware_optimization.py  routing.py  tool_use.py
src/ai_agent_patterns/prompts/: __init__.py  templates.py
src/ai_agent_patterns/tools/: __init__.py  base.py  builtin.py  registry.py
src/ai_agent_patterns/workflows/: chain.py  evaluation.py  planner.py  reflection.py  router.py
tests/: test_llm_clients.py  test_pattern_factories.py  test_workflows.py
