[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-design-pattern-collection"
version = "0.1.0"
description = "Curated implementations of AI agent design patterns with demos and deployment tooling."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "AI Agent Design Pattern Collective" }
]
dependencies = [
  "gradio>=4.0.0",
  "pydantic>=2.4.0",
  "rich>=13.0.0",
  "typer>=0.9.0",
]
[project.optional-dependencies]
extras = [
  "faiss-cpu>=1.7.4",
  "huggingface-hub>=0.20.0",
  "litellm>=1.35.0",
  "openai>=1.0.0",
  "pinecone-client>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/example/ai-agent-design-pattern-collection"
Documentation = "https://github.com/example/ai-agent-design-pattern-collection"

[tool.setuptools]
packages = ["ai_agent_patterns"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
ai_agent_patterns = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "C90", "B", "Q"]
ignore = ["E501"]
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q --disable-warnings"
testpaths = ["tests"]
pythonpath = ["src"]
