[metadata]
name = ai-agent-design-pattern-collection
version = 0.1.0
description = Curated implementations of AI agent design patterns.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    ruff
    black
    mypy

[flake8]
max-line-length = 100
